# diesel_workshop

./: .gitignore  Cargo.toml
01_queryable/src/: main.rs
02_insert/: Cargo.toml
02_insert/src/: main.rs
03_update/src/: main.rs  schema.rs
04_intermediate_querying/src/: main.rs
05_associations/migrations/2019-09-20-152241_create_users/: down.sql  up.sql
05_associations/src/: main.rs  schema.rs
migrations/2019-09-20-150106_create_posts/: up.sql
