[package]
name = "diesel-exercise"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.0", features = ["postgres"] }
dotenv = "0.14.0"
failure = "0.1.5"
